<resources>
    <string name="app_name">LANShare</string>
    <string name="default_ip">默认IP</string>
    <string name="record">记录</string>
    <string name="send">发送</string>
    <string name="file">文件</string>
    <string name="files">文件</string>
    <string name="cancel">取消</string>
    <string name="name">名称</string>
    <string name="size">大小</string>
    <string name="not_file">无记录</string>
    <string name="photos">相册</string>
    <string name="setting">设置</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="about">关于</string>
    <string name="help">使用帮助</string>
    <string name="github">Github</string>
    <string name="copyright">版权所有©fgsq</string>
    <string name="version">V0.0.1_beta</string>
    <string name="privacy">隐私声明</string>
    <string name="join_group">加入QQ群</string>
    <string name="lan_not_device">在局域网中没有搜索到设备</string>
    <string name="send_message_hint">长按发送至设备剪切板</string>
    <string name="cancelled">已取消</string>
    <string name="copy_text">复制文本</string>
    <string name="delete_message">清理消息</string>
    <string name="scan">扫码输入到消息框</string>
    <string name="add_manually">手动扫码添加设备</string>
    <string name="exit">退出软件</string>
    <string name="delete_all_message">清空所有消息</string>
    <string name="delete_all_message_text">清空所有文本消息</string>
    <string name="delete_all_message_file">清空所有文件</string>
    <string name="delete_all_message_is_not_exist_file">清空所有不存在的文件</string>
    <string name="test_text">test text</string>
    <string name="time_zero">00:00</string>
    <string name="select_mode">选择模式</string>
    <string name="confirm">确定</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="set_dev_name">设置设备名称</string>
    <string name="recv_file_path">接收文件时储存的路径</string>
    <string name="after_opening_not_dialog">开启时收到文件将不再提示</string>
    <string name="use_self_media_player">使用内置编辑器打开媒体</string>
    <string name="recv_file_don_t_confirm">接收文件无需确认</string>
    <string name="set_recv_file_path">设置文件储存路径</string>
    <string name="media_default_model_select">媒体默认为选择模式</string>
    <string name="after_opening_chick_media_only_select">开启后点击媒体将只会选中</string>
    <string name="save_message">保存消息记录</string>
    <string name="save_message_detail">开启后会保存所有消息内容</string>
    <string name="save_to_gallery">保存媒体到相册</string>
    <string name="save_to_gallery_detail">开启后接收到媒体文件会直接添加到相册</string>
    <string name="web_qr_code">网页二维码</string>
    <string name="scan_to_connect">扫码连接网页</string>
    <string name="device_qr_code_info">长按复制地址，需要设备在同一局域网扫码才能生效</string>
    <string name="search">搜索</string>
    <string name="enter_search_content">请输入搜索内容</string>
    <string name="show_hidden_files">显示隐藏文件</string>
    <string name="show_hidden_files_detail">文件管理中是否显示隐藏的文件</string>
    <string name="tcp_port">文件接收/网页服务端口</string>
    <string name="tcp_port_detail">接收文件和网页服务的端口</string>
    <string name="udp_port">UDP端口(不建议更改)</string>
    <string name="udp_port_detail">修改此此端口需要保证每个设备UDP端口一致，否则将无法搜索到设备</string>
    <string name="itme_app_name">应用名称</string>
    <string name="item_app_size">应用大小</string>
    <string name="display_system_app">显示系统应用</string>
    <string name="ipv6_connection">IPV6连接</string>
    <string name="select_storage_space">内部共享存储</string>
    <string name="auto_start">开机自启</string>
    <string name="auto_start_detail">
        系统启动后自动启动LANShare并且在后台运行(安卓10以上的系统需要设置软件"悬浮窗权限"和"在后弹出界面权限"才能开机自启动)
    </string>
    <string name="receive_broadcast_messages">接收系统广播消息并发送</string>
    <string name="receive_broadcast_messages_detail">接收系统广播消息并发送给指定的设备</string>
    <string name="broadcast_message">通过系统广播发送消息</string>
    <string name="broadcast_message_detail">收到消息后通过系统广播再次发送消息权限</string>
    <string name="tisp">提示</string>
    <string name="message_key">消息加密密钥</string>
    <string name="message_key_detail">此密钥用于消息传输时加密使用，每个设备配置的秘钥需要一致不然无法收到消息</string>
    <string name="web_service">开启网页文件访问</string>
    <string name="web_service_detail">开启后可使用网页界面上传下载文件或者发送消息</string>
    <string name="sync_notification">发送设备通知(实验性)</string>
    <string name="sync_notification_detail">开启后系统有通知时将发送给局域网设备</string>
    <string name="web_client_management">网页客户端管理</string>
    <string name="message_notification">新消息通知</string>
    <string name="message_notification_detail">
        收到消息时发送通知，如果需要全局弹出通知需要在设置找到软件的通知设置开启(横幅/悬浮)通知这一项才能生效
    </string>
    <string name="encrypted_file_transfer">加密传输文件</string>
    <string name="encrypted_file_transfer_detail">开启后传输文件时加密数据包，但同时传输速度会极大减少</string>
    <string name="web_open_access">网页开放局域网访问(不安全)</string>
    <string name="web_open_access_detail">
        开启后在局域网可直接访问LANShare网页服务，不需要在手机端同意，开启此选项可能会造成数据泄露，请谨慎开启
    </string>
    <string name="send_mute_broadcast_when_dialing_phone">拨打电话时发送静音广播</string>
    <string name="send_mute_broadcast_when_dialing_phone_detail">开启后在拨打电话时会发送静音广播给局域网内的设备
    </string>
    <string name="receive_mute_broadcast">接收静音广播</string>
    <string name="receive_mute_broadcast_detail">开启后其他设备可通过静音广播控制设备音量状态</string>
    <string name="file_expired">下载失败,文件已失效!</string>
    <string name="web_access_denied">访问权限已失效，请刷新主页后授权</string>
    <string name="save_files_path">文件浏览路径保存</string>
    <string name="save_files_path_detail">文件浏览界面保存上次浏览位置</string>
    <string name="save_files_by_category">收到文件时不分类保存</string>
    <string name="save_files_by_category_detal">开始后收到文件不会进行文件夹分类存储</string>
    <string name="path_not_found">路径不存在</string>
    <string name="file_scan_complete">文件扫描完成</string>
    <string name="scanning_files">扫描文件中</string>
    <string name="number_between_1000_and_65535">请输入1000-65535之间的数字</string>
    <string name="no_available_ipv4_address_found">生成失败，没有找到可用的IPv4地址</string>
    <string name="no_available_ipv6_address_found">生成失败，没有找到可用的IPv6地址</string>
    <string name="link_has_been_copied_to_clipboard">已复链接制到剪切板</string>
    <string name="web_service_has_been_enabled">网页服务已开启</string>
    <string name="web_service_has_been_disabled">网页服务已关闭</string>
    <string name="please_enter_the_correct_ip_address">请输入正确的ip</string>
    <string name="please_enter_an_ip_address">请输入一个IP地址</string>
    <string name="unresolvable_notification">不可解析的通知</string>
    <string name="no_corresponding_program_found">没有找到对应的程序</string>
    <string name="ip_is_not_in_local_network">IP不在同一局域网，添加失败</string>
    <string name="file_deletion_successful">删除文件成功</string>
    <string name="file_deletion_failed">删除文件失败</string>
    <string name="file_deletion_failed_operation_terminated">删除文件失败,删除文件终止，文件路径:</string>
    <string name="warning">警告</string>
    <string name="file_deletion_is_irreversible">删除文件不可恢复，是否继续选中文件?</string>
    <string name="Input_cannot_be_empty">输入不能为空</string>
    <string name="all_devices">所有设备</string>
    <string name="text_length_max_700">剪切板字符长度不能超出700个</string>
    <string name="file_transfer_unfinished">文件传输未完成</string>
    <string name="file_sharing_view_not_supported">暂不支持分享文件查看</string>
    <string name="folder_opening_not_supported">暂不支持打开文件夹,请在件管理器中查看</string>
    <string name="web_page_file_sharing_view_not_supported">不支持网页分享文件查看</string>
    <string name="system_information_displayed">已显示系统信息</string>
    <string name="click_twice_to_display_system_information">再点击两次显示系统信息</string>
    <string name="privacy_statement">隐私声明</string>
    <string name="privacy_statement_detail">
        本应用并不会收集用户任何信息\n当软件需要使用到权限并申请时，您有权拒绝授予权限
    </string>
    <string name="receive_file">接收文件</string>
    <string name="copied_to_clipboard">已复制到剪切板</string>
    <string name="please_select_file">请选择文件</string>
    <string name="backup_successful">备份成功</string>
    <string name="backup_failed">备份失败</string>
    <string name="cannot_open_file_format">无法打开该格式文件</string>
    <string name="file_size_is_zero">文件大小为0</string>
    <string name="please_select_operation">请选择操作</string>
    <string name="generate_ipv6_sharing_link">生成IPV6分享链接</string>
    <string name="generate_ipv4_sharing_link">生成IPV4分享链接</string>
    <string name="open">打开</string>
    <string name="file_cannot_be_read">文件不能读取</string>
    <string name="ipv6_address_not_found">没有找到IPV6地址</string>
    <string name="failed_to_get_device_ipv6">获取设备IPV6失败</string>
    <string name="failed_to_get_ip">获取IP失败,请连接局域网后重试</string>
    <string name="authorize_file_access_permission">请授权文件访问权限，不然软件将无法正常使用</string>
    <string name="you_need_to_agree_to_storage_permissions">" 您需要同意储存使用权限才能正常使用本软件,软件并不会上传任何数据
        "
    </string>
    <string name="you_must_authorize_permissions">您必须授权限才能正常使用比软件</string>
    <string name="need_overlay_permission">安卓10以上需要申请悬浮窗权限才能开机自启</string>
    <string name="need_do_not_disturb_permission">控制静音操作需要勿扰权限，需要手动授权此权限</string>
    <string name="need_notification_permission">同步通知需要获取通知权限，需要手动授权此权限</string>
    <string name="storage_permission_request_successful">存储权限申请成功</string>
    <string name="storage_permission_request_failed">存储权限申请失败</string>
    <string name="broadcast_service_reception_exception">广播服务接收异常,请检查参数是否正确</string>
    <string name="add_device_failed_devices_not_on_same_local_network">添加设备失败，设备不在同一局域网</string>
    <string name="add_device_successful">添加设备%s 成功</string>
    <string name="message_decryption_failed">消息解密失败</string>
    <string name="connection_to_device_failed">连接%s失败，请检查设备是否在线</string>
    <string name="cancel_file_reception">取消接收文件</string>
    <string name="copy_text_to_clipboard_successful">复制文本到剪切板成功</string>
    <string name="message_encryption_failed">消息加密失败</string>
    <string name="text_length_exceeds_limit">文本长度超出限制，将使用文件通道传输文本</string>
    <string name="please_authorize_file_access_permission_or_else_software">请授权文件访问权限，不然软件将无法正常使用
    </string>
    <string name="please_manually_authorize_this_folder_in_the_software">请手动在软件中授权此文件夹</string>
    <string name="this_folder_cannot_be_read">此文件夹不能被读取</string>
    <string name="input_content_cannot_be_empty">输入内容不能为空</string>
    <string name="start_tcp_service_failed">启动TCP服务失败，请检查端口是否被使用</string>
    <string name="start_udp_service_failed">启动UDP服务失败，请检查端口是否被使用</string>
    <string name="use_help">使用帮助</string>
    <string name="smartphone_manufacturer">手机厂商</string>
    <string name="phone_model">设备型号</string>
    <string name="android_version">安卓版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="operating_system_version">操作系统版本</string>
    <string name="api_level">API级别</string>
    <string name="send_message_to">向%s发送消息</string>
    <string name="port_changes_notice">端口修改提示</string>
    <string name="port_changes_require_a_software_restart">端口修改需要重启软件后才能生效，是否退出软件？</string>
    <string name="not_exit">不退出</string>
    <string name="application">应用</string>
    <string name="media">媒体</string>
    <string name="general_settings">通用设置</string>
    <string name="advanced_settings">高级设置</string>
    <string name="media_settings">媒体设置</string>
    <string name="extension_settings">扩展设置</string>
    <string name="applications">个应用</string>
    <string name="selected_x_file">已选择%d个文件</string>
    <string name="all_images">所有图片</string>
    <string name="all_videos">所有视频</string>
    <string name="clear_all_messages">清空所有消息</string>
    <string name="clear_all_text_messages">清空所有文本消息</string>
    <string name="clear_all_file_messages">清空所有文件消息</string>
    <string name="clear_all_deleted_file_messages">清空所有文件已被删除的消息</string>
    <string name="web_authorization_list">网页授权列表</string>
    <string name="add_new">新增</string>
    <string name="file_management_settings">文件管理设置</string>
    <string name="info">信息</string>
    <string name="loading">加载中</string>
    <string name="accept_file_from_x">是否接收来自%1$s的%2$d个文件</string>
    <string name="accept_files">是否接收文件?</string>
    <string name="media_sharing_amnagement">媒体共享管理</string>
    <string name="update">更新</string>
    <string name="select_need_update_apps">选择需要更新的应用</string>
</resources>