<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:id="@+id/record_item_img_real"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/record_item_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_file" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/record_item_img_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/record_item_delete_layout"
        android:layout_toLeftOf="@+id/record_item_delete_layout"
        android:layout_toEndOf="@+id/record_item_img_real"
        android:layout_toRightOf="@+id/record_item_img_real"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/record_item_img_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/record_item_img_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="#939393"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ProgressBar
            android:id="@+id/record_item_prog"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="15dp"
            android:max="100" />

        <TextView
            android:id="@+id/record_item_img_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:text="@string/size"
            android:textColor="#939393"
            android:textSize="10sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_item_delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">


        <TextView
            android:id="@+id/record_item_img_tv_cencel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</RelativeLayout>

