<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:minWidth="2600dip"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/select_need_update_apps"
                    android:textSize="16sp"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
            <LinearLayout
                    android:gravity="center_vertical|right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_all"
                        android:textColor="#FF000000"
                        android:textSize="14sp"/>
                <CheckBox
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:id="@+id/app_update_select_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/app_update_recy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/app_update_layout_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="@drawable/focused_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout

                    android:id="@+id/app_update_layout_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="@drawable/focused_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

